[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://enemy/unnamed.png" type="Texture" id=2]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 12.9011
height = 20.9714

[sub_resource type="CircleShape2D" id=3]

[node name="enemy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3.44325, -2.91352 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
playing = true

[node name="hitbox" type="Area2D" parent="." groups=[
"Enemy",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 2.12491, -3.10627 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.74521, 1.00507 )
shape = SubResource( 3 )

[node name="Stun_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Stun_timer" to="." method="_on_Timer_timeout"]
